css/default.css
/* ... */
/*┌──────────────────┐*/
/*│ Popup title bar. │*/
/*└──────────────────┘*/

.popup.has-title-bar {
    min-width: var(--GW-popups-popup-with-title-bar-min-width);
}

.popup .popframe-title-bar {
    position: absolute;
    height: var(--popup-title-bar-height);
    border-bottom: 1px solid var(--GW-popups-popup-border-color);
    background-color: var(--GW-popups-popup-title-bar-background-color);
    display: flex;
    flex-flow: row;
    align-items: center;
    width: 100%;
    cursor: grab;
    z-index: 111;
}

.popup.has-title-bar.mini-title-bar .popframe-title-bar {
    overflow: hidden;
}
.popup.grabbed .popframe-title-bar,
.popup.dragging .popframe-title-bar,
.popup.dragging .popframe-title-bar a {
    cursor: grabbing;
}

.popup {
    --popup-title-bar-height: 0px;
}
.popup.has-title-bar {
    --popup-title-bar-height: var(--GW-popups-popup-title-bar-height);
    --popup-title-bar-button-size: var(--popup-title-bar-height) - 1px;
}
.popup.has-title-bar.mini-title-bar {
    --popup-title-bar-height: var(--GW-popups-popup-mini-title-bar-height);
}

/*  Popup title.
    */
.popup .popframe-title {
	display: flex;
	justify-content: center;
    font-family: var(--GW-sans-serif-font-stack);
    font-size: 0.8rem;
    font-weight: bold;
    flex: 1 1 100%;
    /*  Extra 3rem padding on right to maintain centeredness despite
    	2 extra buttons on left.
     */
    padding: 0 4rem 0 1rem;
    white-space: nowrap;
    overflow: hidden;
    text-decoration: none;
    text-align: center;
}
.popup.mini-title-bar .popframe-title {
    visibility: hidden;
    padding: 0;
    flex: 0 1 100%;
    line-height: 0;
}
.popup .popframe-title-link {
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
}
.popup .popframe-title,
.popup .popframe-title span,
.popup .popframe-title a {
    color: var(--GW-popups-popup-title-color);
}
.popup .popframe-title a:hover {
    color: var(--GW-popups-popup-title-link-hover-color);
}
.popup .popframe-title::after {
    display: none;
}

/*  Buttons in the popup title bar.
    */
.popup .popframe-title-bar-button {
    appearance: none;
    border: none;
    background-color: transparent;
    font-size: inherit;
    font-family: inherit;
    font-weight: inherit;
    font-style: inherit;
    line-height: 0;
    margin: 0 1px 0 0;
    padding: 4px;
    height: 100%;
    flex: 0 0 1.5rem;
    width: var(--popup-title-bar-button-size);
    cursor: pointer;
    color: var(--GW-popups-popup-title-bar-button-color);
}
.popup.mini-title-bar .popframe-title-bar-button {
    padding: 2px;
    flex: 0 0 1rem;
}
.popup .popframe-title-bar-button:hover {
    color: var(--GW-popups-popup-title-bar-button-color-hover);
}
.popup .popframe-title-bar-button:active {
    transform: scale(0.9);
}
.popup .popframe-title-bar-button svg {
    max-width: 100%;
    max-height: 100%;
}

.popup .popframe-title-bar-button:disabled {
    pointer-events: none;
    opacity: 0.35;
}

.popup .popframe-title-bar-button.zoom-button {
    padding: 5px;
}

.popup.mini-title-bar button.zoom-button,
.popup.mini-title-bar button.options-button {
    display: none;
}

/*  Sub-menus of buttons in the popup title bar.
    */

.popup .popframe-title-bar .submenu {
    position: absolute;
    top: var(--popup-title-bar-height);
    background-color: var(--GW-popups-popup-title-bar-background-color);
    display: grid;
    grid-template-columns: auto auto auto;
    grid-gap: 1px;
    padding: 0 1px 1px 1px;
    background-color: var(--GW-popups-popup-border-color);
    visibility: hidden;
    box-shadow:
        1px 1px 0 0 var(--GW-popups-popup-title-bar-submenu-box-shadow-color);
    opacity: 0.0;
    transition:
        visibility 0.1s ease 0.2s,
        opacity 0.1s ease 0.2s;
}
.popup .popframe-title-bar .zoom-button + .submenu {
    left: -1px;
}
.popup .popframe-title-bar .submenu:hover,
.popup .popframe-title-bar .has-submenu:hover + .submenu {
    visibility: visible;
    opacity: 1.0;
}
.popup .popframe-title-bar .submenu button {
    background-color: var(--GW-popups-popup-title-bar-background-color);
    border: none;
    margin: 0;
}
.popup .popframe-title-bar .submenu button svg {
    height: calc(var(--popup-title-bar-button-size) - 8px);
    width: calc(var(--popup-title-bar-button-size) - 8px);
}

/*┌─────────────────────────────┐*/
/*│ Popup with appended footer. │*/
/*└─────────────────────────────┘*/

.popup.has-footer {
	border-bottom-width: 0;
}

/*┌──────────────────────────────┐*/
/*│ Appended partial annotation. │*/
/*└──────────────────────────────┘*/

.popup .partial-annotation-append-container {
	background-color: var(--GW-popups-popup-background-color);
	padding: var(--popups-popup-content-padding);
	position: absolute;
	top: 100%;
	left: calc(-1 * var(--GW-popups-popup-border-width));
	right: calc(-1 * var(--GW-popups-popup-border-width));
	border-color: inherit;
	border-style: inherit;
	border-width: 
		0 
		var(--GW-popups-popup-border-width) 
		var(--GW-popups-popup-border-width) 
		var(--GW-popups-popup-border-width);
	box-shadow:
		0 -3px 0 -2px var(--GW-popups-popup-border-color),
		0 -4px 0 -2px var(--GW-popups-popup-background-color),
		0 -5px 0 -2px var(--GW-popups-popup-border-color),
		var(--popups-popup-box-shadow);
}

.popup .partial-annotation-append-container .data-field {
	display: inline;
}

.popup .partial-annotation-append-container .data-field.title {
	margin-right: 0.25em;
}

/*┌────────────────────┐*/
/*│ Popup scroll view. │*/
/*└────────────────────┘*/

.popup .popframe-scroll-view {
    overflow-y: auto;
    overscroll-behavior: none;
    max-height: calc(var(--GW-popups-popup-max-height) - 2 * var(--GW-popups-popup-border-width) - var(--popup-title-bar-height));
    height: 100%;
    margin-top: var(--popup-title-bar-height);
}

/*  Scroll bar styles (for WebKit/Blink).
    */
.popup .popframe-scroll-view::-webkit-scrollbar {
    width: 14px;
}
/* ... */

